[package]
name = "esp-test"
version = "0.1.0"
authors = ["Patrick Rakowicz <patrick.rakowicz@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.22.0", features = ["esp32"] }
esp-backtrace = { version = "0.14.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.12.0", features = ["esp32"] }
dht11 = "0.3.1"
embedded-graphics = "0.8.1"  # For drawing primitives and text
ssd1306 = "0.9.0"  # OLED driver library

#https://docs.rs/embedded-hal/1.0.0-alpha.11/embedded_hal/i2c/index.html
embedded-hal = "1.0.0"  # Hardware Abstraction Layer, not sure if needed

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
